# moosic

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: release.yml
docs/api/: album.md  annotation.md  artist.md  bookmark.md  error.md  health.md  library.md  library_admin.md  music.md  playlist.md  search.md  server_admin.md  share.md  user.md  user_admin.md
docs/api/admin/: library.md  server.md  user.md
docs/db/: schema.md
docs/design/: architecture.md  scanner.md  summary.md  watcher.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260614_000001_create_users_table.rs  m20260617_000002_create_remaining_tables.rs
src/: config.rs  error.rs  main.rs  redis.rs  router.rs  state.rs
src/cache/: dashmap.rs  memory.rs  mod.rs  moka.rs  redis.rs
src/db/: mod.rs  sqlite.rs
src/entities/: albums.rs  artists.rs  bookmarks.rs  cover_art.rs  libraries.rs  lyrics.rs  mod.rs  password_resets.rs  playlist_songs.rs  playlists.rs  prelude.rs  ratings.rs  scan_tasks.rs  scrobbles.rs  sessions.rs  shares.rs  songs.rs  stars.rs  user_libraries.rs  users.rs
src/handlers/: album.rs  annotation.rs  artist.rs  bookmark.rs  health.rs  library.rs  mod.rs  music.rs  playlist.rs  search.rs  server.rs  share.rs  user.rs  users.rs
src/handlers/admin/: library.rs  user.rs
src/middleware/: auth.rs
src/services/: annotation.rs  auth.rs  bookmark.rs  cover.rs  library.rs  media.rs  metadata.rs  mod.rs  playlist.rs  scanner.rs  search.rs  share.rs  user.rs  watcher.rs
src/utils/: time.rs
web/: package.json
web/src/: App.tsx  index.css  main.tsx
(+18 files in other folders)
