[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

[dependencies.async-std]
version = "1"
features = ["attributes", "tokio1"]

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"
